update: Break-word and header size to prevent overflow on mobile.

--- a/client/components/Header/header.scss
+++ b/client/components/Header/header.scss
@@ -14,7 +14,7 @@
 		color: white;
 		.bp3-button:not([class*="bp3-intent-"]), .bp3-button[class*="bp3-icon-"]::before { color: inherit; }
 	}
-	.separator { 
+	.separator {
 		color: inherit;
 		padding: 0px 10px;
 		font-size: 28px;
@@ -22,7 +22,7 @@
 	.header-items {
 		height: 40px;
 		display: flex;
-		align-items: center;		
+		align-items: center;
 	}
 	.header-items-left {
 		float: left;
@@ -61,6 +61,7 @@
 			font-weight: 900;
 			letter-spacing: 1px;
 			font-size: 85px;
+			word-wrap: break-word;
 		}
 		.description {
 			padding: 1em 0em 2em;
@@ -82,6 +83,9 @@
 		.community-header {
 			.description {
 				max-width: 100%;
+			}
+			.title {
+				font-size: 50px;
 			}
 		}
 	}
